update auth.routes.ts, auth.shcema.ts, auth.controller.ts and user.model.ts
